--- a/css/style.css
+++ b/css/style.css
@@ -150,4 +150,47 @@ li {
   margin-top: 45px;
 }
 
+
 /* section 3 */
+.section3 {
+  width: 1180px;
+  margin: 200px auto;
+  /* background-color: red; */
+  
+}
+
+.section3_heading {
+  color: #4D4D4D;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 130%;
+  letter-spacing: 0.005em;
+  margin-bottom: 54px;
+  text-align: center;
+}
+
+
+.section3_paragraph {
+  color: #535353;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.005em;
+  margin-top: 32px;
+}
+
+.div_section3 {
+  display: inline-block;
+  margin-right: 15px;
+  
+  
+}
+
+.div_section4 {
+  display: inline-block;
+  
+}
